contract-chameleon.lang.contract_lib.tools/src/test/resources/ast/errors/TyposKeywordSort.clib
;typo in keyword
(declare-ort TestSortE 0 )
